add tailwind and also add nav

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <title>Ecomrance site</title>
+    <!-- thi is for SEO -->
+    <meta name="description" content="Filip's site is a fast modern and user-friendly eCommerce platform." />
+    <meta name="keywords" content="eCommerce, online store, shopping, modern design, products, buy online" />
+    <meta name="robots" content="index, follow" />
+    
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+
   </body>
 </html>
